# eitri

./: README.md  eitri.cabal  newlang.cabal  stack.yaml
example/: fac.ei  fib.ei  hello.ei
src/Eitri/: AST.hs  CodeGen.hs  Compiler.hs  Parser.hs  Tokeniser.hs
src/Newlang/: AST.hs  Parser.hs  Tokeniser.hs
test/: TestSuite.hs
