name:                eitri
version:             0.1.0.0
synopsis:            New Language
description:         New Language that compiles to C++
homepage:            https://github.com/nickpollard/newlang#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Pollard
maintainer:          nickedwardpollard@gmail.com
copyright:           2017 Nick Pollard
category:            Lang
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Eitri.Parser,
                       Eitri.AST,
                       Eitri.Compiler,
                       Eitri.Tokeniser
  build-depends:       base >= 4.7 && < 5,
                       megaparsec,
                       mtl,
                       text,
                       extra,
                       containers,
                       bytestring,
                       cereal,
                       either,
                       lens,
                       memory,
                       optparse-applicative,
                       srcloc,
                       stm,
                       vector
  default-language:    Haskell2010
  default-extensions:
      ConstraintKinds
      DataKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      MagicHash
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilies
      TypeFamilyDependencies
      TypeOperators
      TypeSynonymInstances
      UndecidableInstances
      ViewPatterns

executable eitri-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , eitri
  default-language:    Haskell2010

test-suite eitri-test
    type: exitcode-stdio-1.0
    main-is: TestSuite.hs
    build-depends:
        base,
        lens,
        megaparsec,
        mtl,
        srcloc,
        stm,
        tasty,
        tasty-hunit,
        tasty-quickcheck,
        text,
        vector,
        eitri
    default-language: Haskell2010
    default-extensions:
      ConstraintKinds
      DataKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      MagicHash
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilies
      TypeFamilyDependencies
      TypeOperators
      TypeSynonymInstances
      UndecidableInstances
      ViewPatterns
    hs-source-dirs: test
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/githubuser/newlang
